--- a/source/catalog.html
+++ b/source/catalog.html
@@ -306,20 +306,23 @@
       <div class="contacts__container container">
         <h2 class="visually-hidden subtitle">Контакты</h2>
         <div class="contacts__info contact-info">
-          <p class="contact-info__promo">Приглашаем к сотрудничеству дилеров!</p>
+          <p class="contact-info__promo">Приглашаем к&nbsp;сотрудничеству дилеров!</p>
           <div class="contact-info__text-wrap">
             <p class="contact-info__text">ул. Большая Конюшенная, д. 19/8</p>
             <p class="contact-info__text">Санкт-Петербург</p>
           </div>
         </div>
       </div>
-      <div class="contacts__map"></div>
+      <div class="contacts__map-wrap">
+        <h3 class="visually-hidden">Как до нас добраться</h3>
+        <iframe class="contacts__map-frame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037861610246!2d30.3230474!3d59.9387165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1716404033308!5m2!1sru!2sru" width="320" height="362" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Офис компании по адресу ул. Большая Конюшенная, д. 19/8, Санкт-Петербург"></iframe>
+      </div>
     </section>
   </main>
   <footer class="main-footer">
     <div class="main-footer__container container">
       <a class="main-footer__logo" href="index.html">
-        <img src="images/logo/logo-text.svg" alt="Cat Energy" width="101" height="18">
+        <img src="images/logo/logo-text.svg" alt="Cat Energy" width="128" height="18">
       </a>
       <ul class="main-footer__social social-list list-reset">
         <li class="social-list__item">
