--- a/source/index.html
+++ b/source/index.html
@@ -103,14 +103,18 @@
           </div>
         </div>
         <div class="reviews__slider slider">
-          <picture>
-            <source media="(min-width: 768px)" srcset="images/index/slider/slider-before-desktop@1x.png 1x, images/index/slider/slider-before-desktop@2x.png 2x" type="image/png" width="560" height="512">
-            <img class="slider__image-before" src="images/index/slider/slider-before-mobile@1x.png" srcset="images/index/slider/slider-before-mobile@2x.png 2x" alt="Кот с ожирением" width="280" height="256">
-          </picture>
-          <picture>
-            <source media="(min-width: 768px)" srcset="images/index/slider/slider-after-desktop@1x.png 1x, images/index/slider/slider-after-desktop@2x.png 2x" type="image/png" width="560" height="512">
-            <img class="slider__image-after" src="images/index/slider/slider-after-mobile@1x.png" srcset="images/index/slider/slider-after-mobile@2x.png 2x" alt="Кот в здоровом весе" width="280" height="256">
-          </picture>
+          <div class="slider__image-wrap">
+            <picture>
+              <source media="(min-width: 768px)" srcset="images/index/slider/slider-before-desktop@1x.png 1x, images/index/slider/slider-before-desktop@2x.png 2x" type="image/png" width="560" height="512">
+              <img class="slider__image slider__image--before" src="images/index/slider/slider-before-mobile@1x.png" srcset="images/index/slider/slider-before-mobile@2x.png 2x" alt="Кот с ожирением" width="280" height="256">
+            </picture>
+          </div>
+          <div class="slider__image-wrap">
+            <picture>
+              <source media="(min-width: 768px)" srcset="images/index/slider/slider-after-desktop@1x.png 1x, images/index/slider/slider-after-desktop@2x.png 2x" type="image/png" width="560" height="512">
+              <img class="slider__image slider__image--after" src="images/index/slider/slider-after-mobile@1x.png" srcset="images/index/slider/slider-after-mobile@2x.png 2x" alt="Кот в здоровом весе" width="280" height="256">
+            </picture>
+          </div>
           <button class="slider__button" type="button">
             <span class="visually-hidden">Переместить</span>
           </button>
@@ -128,7 +132,10 @@
           </div>
         </div>
       </div>
-      <div class="contacts__map"></div>
+      <div class="contacts__map-wrap">
+        <h3 class="visually-hidden">Как до нас добраться</h3>
+        <iframe class="contacts__map-frame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037861610246!2d30.3230474!3d59.9387165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1716404033308!5m2!1sru!2sru" width="320" height="362" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Офис компании по адресу ул. Большая Конюшенная, д. 19/8, Санкт-Петербург"></iframe>
+      </div>
     </section>
   </main>
   <footer class="main-footer">
