--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Каталог - Cat Energy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="preload" href="fonts/lato/Lato-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
@@ -50,7 +52,9 @@
           <li class="product-list__item product">
             <a class="product__image-link" href="#">
               <picture>
+                <source media="(min-width: 768px)" srcset="images/catalog/products/chicken-500-desktop@1x.webp 1x, images/catalog/products/chicken-500-desktop@2x.webp 2x" type="image/webp" width="161" height="172">
                 <source media="(min-width: 768px)" srcset="images/catalog/products/chicken-500-desktop@1x.png 1x, images/catalog/products/chicken-500-desktop@2x.png 2x" type="image/png" width="161" height="172">
+                <source srcset="images/catalog/products/chicken-500-mobile@1x.webp 1x, images/catalog/products/chicken-500-mobile@2x.webp 2x" type="image/webp" width="68" height="86">
                 <img class="product__image" src="images/catalog/products/chicken-500-mobile@1x.png" srcset="images/catalog/products/chicken-500-mobile@2x.png 2x" alt="Cat Energy PRO с курицей 500 г" width="68" height="86">
               </picture>
             </a>
@@ -76,7 +80,9 @@
           <li class="product-list__item product">
             <a class="product__image-link" href="#">
               <picture>
+                <source media="(min-width: 768px)" srcset="images/catalog/products/chicken-1000-desktop@1x.webp 1x, images/catalog/products/chicken-1000-desktop@2x.webp 2x" type="image/webp" width="168" height="206">
                 <source media="(min-width: 768px)" srcset="images/catalog/products/chicken-1000-desktop@1x.png 1x, images/catalog/products/chicken-1000-desktop@2x.png 2x" type="image/png" width="168" height="206">
+                <source srcset="images/catalog/products/chicken-1000-mobile@1x.webp 1x, images/catalog/products/chicken-1000-mobile@2x.webp 2x" type="image/webp" width="84" height="100">
                 <img class="product__image" src="images/catalog/products/chicken-1000-mobile@1x.png" srcset="images/catalog/products/chicken-1000-mobile@2x.png 2x" alt="Cat Energy PRO с курицей 1000 г" width="84" height="100">
               </picture>
             </a>
@@ -102,7 +108,9 @@
           <li class="product-list__item product">
             <a class="product__image-link" href="#">
               <picture>
+                <source media="(min-width: 768px)" srcset="images/catalog/products/fish-500-desktop@1x.webp 1x, images/catalog/products/fish-500-desktop@2x.webp 2x" type="image/webp" width="163" height="174">
                 <source media="(min-width: 768px)" srcset="images/catalog/products/fish-500-desktop@1x.png 1x, images/catalog/products/fish-500-desktop@2x.png 2x" type="image/png" width="163" height="174">
+                <source srcset="images/catalog/products/fish-500-mobile@1x.webp 1x, images/catalog/products/fish-500-mobile@2x.webp 2x" type="image/webp" width="68" height="78">
                 <img class="product__image" src="images/catalog/products/fish-500-mobile@1x.png" srcset="images/catalog/products/fish-500-mobile@2x.png 2x" alt="Cat Energy PRO с рыбой 500 г" width="68" height="78">
               </picture>
             </a>
@@ -128,7 +136,9 @@
           <li class="product-list__item product">
             <a class="product__image-link" href="#">
               <picture>
+                <source media="(min-width: 768px)" srcset="images/catalog/products/fish-1000-desktop@1x.webp 1x, images/catalog/products/fish-1000-desktop@2x.webp 2x" type="image/webp" width="168" height="200">
                 <source media="(min-width: 768px)" srcset="images/catalog/products/fish-1000-desktop@1x.png 1x, images/catalog/products/fish-1000-desktop@2x.png 2x" type="image/png" width="168" height="200">
+                <source srcset="images/catalog/products/fish-1000-mobile@1x.webp 1x, images/catalog/products/fish-1000-mobile@2x.webp 2x" type="image/webp" width="84" height="100">
                 <img class="product__image" src="images/catalog/products/fish-1000-mobile@1x.png" srcset="images/catalog/products/fish-1000-mobile@2x.png 2x" alt="Cat Energy PRO с рыбой 1000 г" width="84" height="100">
               </picture>
             </a>
@@ -154,7 +164,9 @@
           <li class="product-list__item product">
             <a class="product__image-link" href="#">
               <picture>
+                <source media="(min-width: 768px)" srcset="images/catalog/products/buckwheat-500-desktop@1x.webp 1x, images/catalog/products/buckwheat-500-desktop@2x.webp 2x" type="image/webp" width="161" height="171">
                 <source media="(min-width: 768px)" srcset="images/catalog/products/buckwheat-500-desktop@1x.png 1x, images/catalog/products/buckwheat-500-desktop@2x.png 2x" type="image/png" width="161" height="171">
+                <source srcset="images/catalog/products/buckwheat-500-mobile@1x.webp 1x, images/catalog/products/buckwheat-500-mobile@2x.webp 2x" type="image/webp" width="68" height="78">
                 <img class="product__image" src="images/catalog/products/buckwheat-500-mobile@1x.png" srcset="images/catalog/products/buckwheat-500-mobile@2x.png 2x" alt="Cat Energy PRO с гречкой 500 г" width="68" height="78">
               </picture>
             </a>
@@ -180,7 +192,9 @@
           <li class="product-list__item product">
             <a class="product__image-link" href="#">
               <picture>
+                <source media="(min-width: 768px)" srcset="images/catalog/products/buckwheat-1000-desktop@1x.webp 1x, images/catalog/products/buckwheat-1000-desktop@2x.webp 2x" type="image/webp" width="168" height="200">
                 <source media="(min-width: 768px)" srcset="images/catalog/products/buckwheat-1000-desktop@1x.png 1x, images/catalog/products/buckwheat-1000-desktop@2x.png 2x" type="image/png" width="168" height="200">
+                <source srcset="images/catalog/products/buckwheat-1000-mobile@1x.webp 1x, images/catalog/products/buckwheat-1000-mobile@2x.webp 2x" type="image/webp" width="84" height="100">
                 <img class="product__image" src="images/catalog/products/buckwheat-1000-mobile@1x.png" srcset="images/catalog/products/buckwheat-1000-mobile@2x.png 2x" alt="Cat Energy PRO с гречкой 1000 г" width="84" height="100">
               </picture>
             </a>
@@ -206,7 +220,9 @@
           <li class="product-list__item product">
             <a class="product__image-link" href="#">
               <picture>
+                <source media="(min-width: 768px)" srcset="images/catalog/products/rice-500-desktop@1x.webp 1x, images/catalog/products/rice-500-desktop@2x.webp 2x" type="image/webp" width="163" height="174">
                 <source media="(min-width: 768px)" srcset="images/catalog/products/rice-500-desktop@1x.png 1x, images/catalog/products/rice-500-desktop@2x.png 2x" type="image/png" width="163" height="174">
+                <source srcset="images/catalog/products/rice-500-mobile@1x.webp 1x, images/catalog/products/rice-500-mobile@2x.webp 2x" type="image/webp" width="72" height="84">
                 <img class="product__image" src="images/catalog/products/rice-500-mobile@1x.png" srcset="images/catalog/products/rice-500-mobile@2x.png 2x" alt="Cat Energy PRO с рисом 500 г" width="72" height="84">
               </picture>
             </a>
@@ -341,7 +357,7 @@
           </a>
         </li>
       </ul>
-      <a class="main-footer__developers developers" href="#">
+      <a class="main-footer__developers developers" href="https://htmlacademy.ru/intensive/adaptive">
         <p class="developers__name">HTML Academy</p>
         <p class="developers__logo">
           <span class="visually-hidden">Логотип HTML Academy</span>
