--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Главная - Cat Energy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="preload" href="fonts/lato/Lato-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
@@ -47,8 +49,11 @@
         <h1 class="hero__title title">Функциональное питание для котов</h1>
         <p class="hero__subtitle subtitle">Занялся собой? Займись котом!</p>
         <picture>
+          <source media="(min-width: 1440px)" srcset="images/index/hero/hero-product-desktop@1x.webp 1x, images/index/hero/hero-product-desktop@2x.webp 2x" type="image/webp" width="552" height="499">
           <source media="(min-width: 1440px)" srcset="images/index/hero/hero-product-desktop@1x.png 1x, images/index/hero/hero-product-desktop@2x.png 2x" type="image/png" width="552" height="499">
+          <source media="(min-width: 768px)" srcset="images/index/hero/hero-product-tablet@1x.webp 1x, images/index/hero/hero-product-tablet@2x.webp 2x" type="image/webp" width="709" height="609">
           <source media="(min-width: 768px)" srcset="images/index/hero/hero-product-tablet@1x.png 1x, images/index/hero/hero-product-tablet@2x.png 2x" type="image/png" width="709" height="609">
+          <source srcset="images/index/hero/hero-product-mobile@1x.webp 1x, images/index/hero/hero-product-mobile@2x.webp 2x" type="image/webp" width="280" height="270">
           <img class="hero__image" src="images/index/hero/hero-product-mobile@1x.png" srcset="images/index/hero/hero-product-mobile@2x.png 2x" alt="Cat Energy Pro с курицей" width="280" height="270">
         </picture>
         <a class="hero__button button" href="#">Подобрать программу</a>
@@ -105,13 +110,17 @@
         <div class="reviews__slider slider">
           <div class="slider__image-wrap">
             <picture>
+              <source media="(min-width: 768px)" srcset="images/index/slider/slider-before-desktop@1x.webp 1x, images/index/slider/slider-before-desktop@2x.webp 2x" type="image/webp" width="560" height="512">
               <source media="(min-width: 768px)" srcset="images/index/slider/slider-before-desktop@1x.png 1x, images/index/slider/slider-before-desktop@2x.png 2x" type="image/png" width="560" height="512">
+              <source srcset="images/index/slider/slider-before-mobile@1x.webp 1x, images/index/slider/slider-before-mobile@2x.webp 2x" type="image/webp" width="280" height="256">
               <img class="slider__image slider__image--before" src="images/index/slider/slider-before-mobile@1x.png" srcset="images/index/slider/slider-before-mobile@2x.png 2x" alt="Кот с ожирением" width="280" height="256">
             </picture>
           </div>
           <div class="slider__image-wrap">
             <picture>
+              <source media="(min-width: 768px)" srcset="images/index/slider/slider-after-desktop@1x.webp 1x, images/index/slider/slider-after-desktop@2x.webp 2x" type="image/webp" width="560" height="512">
               <source media="(min-width: 768px)" srcset="images/index/slider/slider-after-desktop@1x.png 1x, images/index/slider/slider-after-desktop@2x.png 2x" type="image/png" width="560" height="512">
+              <source srcset="images/index/slider/slider-after-mobile@1x.webp 1x, images/index/slider/slider-after-mobile@2x.webp 2x" type="image/webp" width="280" height="256">
               <img class="slider__image slider__image--after" src="images/index/slider/slider-after-mobile@1x.png" srcset="images/index/slider/slider-after-mobile@2x.png 2x" alt="Кот в здоровом весе" width="280" height="256">
             </picture>
           </div>
@@ -160,7 +169,7 @@
           </a>
         </li>
       </ul>
-      <a class="main-footer__developers developers" href="#">
+      <a class="main-footer__developers developers" href="https://htmlacademy.ru/intensive/adaptive">
         <p class="developers__name">HTML Academy</p>
         <p class="developers__logo">
           <span class="visually-hidden">Логотип HTML Academy</span>
